-----------------------------------------------------------------------------

 >>> NOTICE!!! <<<

 This file contains SPOILERS, which might ruin your IVAN experience
 totally. The file is provided AS IS and is probably completely unreadable.

-----------------------------------------------------------------------------
May 7 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * player now get a mysterious and large saga of the pantheon when he/she/it
    finds about all the gods.	
	
May 7 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * added some features that will give player bonus when he finds all gods 
	(not fully implemented yet)

April 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * shopkeepers cannot be fooled by primed holy handgrenades.

April 23 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * integrated code from Atomic:
  * acid shield
  * weeping blade
  * amulet of warding (may not actually function? OR?)	
	
April 6 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
  * Corrected "if and ;" bug spotted by TheFallenOne222
	
April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * BugFix: Mirror and clone crashed

April 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
  * fixes to look mode and holy handgrenade in the world map	

April 2 2005 Heikki Sairanen <heikki.sairanen@gmail.com>

  * (some of these may refer to last commits)
  * Holy handgranade
  * gas grenades
  * total weight of inventory to inventory

April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Mustard gas works somehow

April 2 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>

  * Added some antidote to priests' inventories
  * Stairs and portals flash in look mode
  * Reduced magical whistle's recharging time from 75 to 60 min, because
    the latter is easier to remember
  * Fixed a certain bug caused by the addition of willpower
  * Fixed a memory leak in the scar code